# crystals

./: CMakeLists.txt  Doxyfile  newstat.bat  orionbuild.sh
CrawlActa/: CrawlActa.py  py-path.bat  (+1 more)
bits/: CMakeLists.txt
bits/Common/: nobuf.c
bits/Diffractometers/: CMakeLists.txt  charact.for  cifin.cmn  ciftbx.cmn  ciftbx.for  ciftbx.sys  datain.for  diffin.F  diffin.fpp  kccdin.fpp  oxdiffin.fpp  xgroup.for
bits/OxDiff/: ciftbx.sys  oxdiffin.F  oxdiffin.fpp
bits/SpaceGroup/: .depend  BaseTypes.cpp  BaseTypes.h  Conditions.cpp  Conditions.h  CrystSymmetry.cpp  CrystSymmetry.h  CrystalSystem.cpp  CrystalSystem.h  Determin.cpp  Determin.h  Exceptions.cpp  Exceptions.h  HKLData.cpp  HKLData.h  InteractiveControl.cpp  InteractiveControl.h  LaueClasses.cpp  LaueClasses.h  LaueGroupGraph.cpp  LaueGroupGraph.h  Matrices.cpp  Matrices.h  MergedData.cpp  MergedData.h  PCF.h  PCPort.cpp  PCPort.h  PointGroups.cpp  PointGroups.h  ReflectionMerging.cpp  ReflectionMerging.h  RunParameters.cpp  RunParameters.h  Space Groups.1  SpaceGroupTable  SpaceGroups.cpp  SpaceGroups.h  Stats.cpp  Stats.h  (+9 more)
bits/SpaceGroup/Collections/: .depend  BaseTypes.cpp  BaseTypes.h  ComClasses.cpp  ComClasses.h  Exceptions.cpp  Exceptions.h  MathFunctions.cpp  MathFunctions.h  Matrices.cpp  Matrices.h  StringClasses.cpp  StringClasses.h  Timer.cpp  Timer.h  Wrappers.cpp  Wrappers.h  makefile
bits/SpaceGroup/Data/: Tables.txt  Tables.xls
bits/SpaceGroup/Docs/: ClassRefIntro.tex  ClassRefence.tex  ComClasses.tex  CrystalSystem.tex  Exceptions.tex  FileDescriptions.tex  HKLData.tex  Matrices.tex  OutputFileFormat.tex  Preamble.tex  Stats.tex  StringClasses.tex  Symbols.tex  Template.tex  UnitCell.tex
bits/SpaceGroup/PCProject/: PCProject.ncb  PCProject.sln
bits/SpaceGroup/PCProject/PCProject/: PCProject.vcproj  ReadMe.txt
bits/SpaceGroup/Space Groups.pbproj/: project.pbxproj  stefan.pbxuser  stefanpa.pbxuser
bits/SpaceGroup/Test files/: co1c.hkl  co1c.p4p
bits/cif2cry/: CMakeLists.txt  Makefile  cif2cry.F  cif2cry.fpp  ciftbx.cmn  ciftbx.for  ciftbx.sys  make.bat
bits/contour/: concom.inc  contour.fpp  contour.src  make.bat
bits/convplat/: CMakeLists.txt  Makefile  convplat.F  convplat.fpp  make.bat  make.linux  platanom.F
bits/csd2cry/: CMakeLists.txt  Makefile  csd2cry.F  csd2cry.fpp  make.bat  make.linux
bits/delred/: CMakeLists.txt  Makefile  delred.F  delred.fpp  make.bat  make.linux  nobuf.c
bits/dipin/: Makefile  dipin.F  dipin.fpp  make.bat
bits/dsc2hdf5/: dsc2hdf5.F90  hdf5_mod.F90
bits/edma/: CMakeLists.txt  README
bits/fixh5/: CMakeLists.txt  H5private.h  fixh5.F90
bits/foxman/: CMakeLists.txt  pcf2cry.fpp  test.pcf
bits/hklf5/: CMakeLists.txt  Makefile  ctwin.F  ctwin.fpp  hklf52cry.F  hklf52cry.fpp
bits/kccdin/: Makefile  charact.for  cifin.cmn  ciftbx.for  datain.for  kccdin.F  kccdin.fpp  make.bat  make.linux  spaceg.F  spaceg.fpp  xgroup.for
bits/loader/: CMakeLists.txt  crysload.cc
bits/multan/: mult84.for  multan.mem
bits/ps2eps/: ps2eps.src
bits/rc93/: Makefile  Makefile.scripts  RC93CM.INC  fort.22  make.bat  rc93.F  rc93.fpp  rc93.ssr
bits/reindex/: CMakeLists.txt  Makefile  make.bat  make.linux  reindex.F  reindex.fpp
bits/shelx2cry/: CMakeLists.txt  Doxyfile  build.sh  crystal_data.F90  shelx2cry.F90  shelx2cry_cif.F90  shelx2cry_dict.F90  shelx2cry_extra.F90  shelx2cry_mod.F90  shelx_procedures.F90
bits/shelx2cry/pFunit/: CMakeLists.txt  test_shelx_keywords.pf
bits/shelx2cry/regressions_tests/: run.sh
bits/shelx2cry/regressions_tests/insfiles/: 2f.ins  hb7731.hkl  hb7731.ins  mo_4984af.ins  pk2606sup1_5.ins  wf5140.ins
bits/shelxs/: CMakeLists.txt  Makefile  kldkdk.cam  make.bat  make.linux  nobuf.c  shelink.fil  shelxs.F  shelxs.fpp  sxlink.fil  sxtocry.F  sxtocry.fpp
bits/sir92/: CMakeLists.txt  norm92.fpp  sir92.F  sir92.fpp  sir92.sh  sir92X11.c
bits/superflip/: CMakeLists.txt  README
cameron/: CMakeLists.txt  altered.F  altered.fpp  block.F  block.fpp  button.fpp  cameron.f  cameron.ssr  ccontrol.F  ccontrol.fpp  colour.scm  comm.F  comm.fpp  cspecific.F  cspecific.fpp  duplicat.F  duplicat.fpp  general.F  general.fpp  graphics.F  graphics.fpp  maths1.F  maths1.fpp  maths2.F  maths2.fpp  mouse.F  mouse.fpp  oldcode.f  order.scm  outer.F  outer.fpp  prop.scm  roman_numerals.f90  vander.F  vander.fpp  wincode.F  wincode.fpp
crystals/: CAMANA.INC  CAMBLK.INC  CAMBTN.INC  CAMCAL.INC  CAMCHR.INC  CAMCOL.INC  CAMCOM.INC  CAMDAT.INC  CAMDEV.INC  CAMFLG.INC  CAMGRP.INC  CAMIMN.INC  CAMKEY.INC  CAMKMS.INC  CAMMEN.INC  CAMMSE.INC  CAMPAR.INC  CAMSHR.INC  CAMVER.INC  CAMWIN.INC  CIF1.INC  CIF2.INC  CIFSYS.INC  CMakeLists.txt  CONCOM.INC  FOURTP.INC  HEADER.INC  HEADES.INC  IBUFFR.INC  ICNTRL.INC  ICOM01.INC  ICOM02.INC  ICOM03.INC  ICOM04.INC  ICOM05.INC  ICOM06.INC  ICOM07.INC  ICOM09.INC  ICOM11.INC  ICOM12.INC  (+483 more)
gui/: CMakeLists.txt  ccchartcolour.cc  ccchartcolour.cpp  ccchartcolour.h  ccchartdoc.cc  ccchartdoc.h  ccchartellipse.cc  ccchartellipse.cpp  ccchartellipse.h  ccchartline.cc  ccchartline.cpp  ccchartline.h  ccchartobject.cc  ccchartobject.h  ccchartpoly.cc  ccchartpoly.h  cccharttext.cc  cccharttext.h  cccontroller.cc  cccontroller.cpp  cccontroller.h  cccoord.cc  cccoord.cpp  cccoord.h  cccrystcommandlistener.cc  cccrystcommandlistener.h  cclistenablesafedeque.h  cclistenablesequence.h  cclistenerperformer.cc  cclistenerperformer.cpp  cclistenerperformer.h  cclock.cc  cclock.cpp  cclock.h  ccmenuitem.cc  ccmenuitem.h  ccmodelatom.cc  ccmodelatom.cpp  ccmodelatom.h  ccmodelbond.cc  (+200 more)
gui/mac/: Crystals.icns  DSCFile.icns  Info.plist
pFunit/: CMakeLists.txt  dummymodule.f90  readme  testSuites.inc  test_formatnumber.pf  test_linearfit.pf
pyinterface/: CMakeLists.txt  __init__.py  cinterface.c  cinterface.cc  cinterface.h  cinterface.i  cryspy.F  cryspy.c  cryspy.h  modelparameters.cc  modelparameters.h  modelparameters.i  pyspecific.F  setup.py  setup.py.in
sginfo/: CMakeLists.txt  build.sh  sginfo.F90  sginfo.h  sginfo_extra.c  sginfo_type.F90  test.F90
sleef/: CMakeLists.txt  cwrapper.c  fwrapper.f90
(+1532 files in other folders)
