

cmake_minimum_required(VERSION 2.8)

project(Bits)

add_subdirectory(cif2cry)
add_subdirectory(convplat)
add_subdirectory(csd2cry)
add_subdirectory(delred)
add_subdirectory(foxman)
add_subdirectory(hklf5)
add_subdirectory(Diffractometers)
add_subdirectory(reindex)
add_subdirectory(shelxs)
add_subdirectory(sir92)

